# agrisense

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADR.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  architectural_decisions_record.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
AGENT/: ARCHITECTURE.md  PRD.md  ROADMAP.md
AGENT/GAPS/: GAPS202603011200.md  GAPS202603011245.md  GAPS202603011346md  GAPS202603011430.md  GAPS202603011520.md
AGENT/PHASES/: phase9.md
alembic/: env.py  script.py.mako
alembic/versions/: 506ed2dedad4_initial_schema.py  8b2f4c1a9d77_add_recompute_jobs.py  c3a1b9d2e4f6_add_backtest_jobs.py  d91a6e7b4c20_add_anomaly_detection_enhancements.py
app/: config.py  database.py  main.py
app/auth/: dependencies.py  jwt.py  models.py
app/contracts/: __init__.py  jsonb.py
app/middleware/: logging.py  rate_limit.py
app/models/: __init__.py  anomalies.py  base.py  crops.py  enums.py  farm.py  jobs.py  sensors.py
app/routes/: analytics.py  anomalies.py  ask.py  farms.py  ingest.py  jobs.py  ws.py
app/schemas/: analytics.py  anomalies.py  ask.py  farm.py  ingest.py  jobs.py  reports.py
app/services/: agent_tools.py  analytics_service.py  anomaly_service.py  conversation_memory.py  farm_service.py  ingest_service.py  jobs_service.py  julia_bridge.py  julia_contracts.py  julia_validators.py  llm_service.py  report_service.py  webhook_service.py
app/static/: dashboard.html
core/AgriSenseCore/: Project.toml
core/AgriSenseCore/src/: AgriSenseCore.jl  bridge.jl  hypergraph.jl  types.jl
core/AgriSenseCore/src/models/: anomaly.jl  backtesting.jl  irrigation.jl  nutrients.jl  yield.jl
core/AgriSenseCore/src/synthetic/: correlations.jl  generator.jl  lighting.jl  npk.jl  soil.jl  vision.jl  weather.jl
core/AgriSenseCore/test/: runtests.jl  test_anomaly.jl  test_backtesting.jl  test_bridge.jl  test_gpu.jl  test_history.jl  test_hypergraph.jl  test_irrigation.jl  test_nutrients.jl  test_synthetic.jl  test_types.jl  test_yield.jl
scripts/: demo_queries.sh  init_db.sql  seed_db.py
tests/: conftest.py  test_agent_tools.py  test_analytics.py  test_anomalies.py  test_ask.py  test_auth.py  test_conversation_memory.py  test_database.py  test_edge_stress.py  test_farms.py  test_ingest.py  test_jobs.py  test_julia_bridge.py  test_phase9_system.py  test_reports.py  test_seed_script.py  test_websocket.py
